# runbox

./: .editorconfig  .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: pypi.yml  release.yml  run-tests.yml
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst  testing.rst
docs/source/source_docs/: index.rst  models.rst  proto.rst
docs/source/source_docs/docker/: docker_api.rst  exceptions.rst  index.rst  sandbox.rst  utils.rst
docs/source/source_docs/scoring/: index.rst  proto.rst  scoring_strategies.rst  (+1 more)
examples/: cpp-simple-dividers.py  fizzbuzz.py  pipeline_cpp_example.py  pipeline_example.py  simple_example.py  simpliest_example.py
examples/images/Python3.10/: Dockerfile
examples/images/gcc10/: Dockerfile
examples/src/: cpp.json  dividers.cpp  python3.json
images/Python3.10/: Dockerfile
runbox/: __init__.py  models.py  proto.py  shortucts.py  utils.py
runbox/build_stages/: __init__.py  exceptions.py  pipeline.py  pipeline_loaders.py  stages.py
runbox/docker/: __init__.py  build_stage.py  docker_api.py  exceptions.py  mount.py  sandbox.py  sandbox_builder.py  utils.py
runbox/scoring/: __init__.py  proto.py  scoring_strategies.py  scoring_system.py
runbox/testing/: __init__.py  proto.py  test_case.py  test_suite.py
tests/: gcc_multistage.json  python3.yml  python3_simplified.json  test_build_stages.py  test_docker.py  test_docker_profile.py  test_pipeline.py  test_scoring.py
tests/images/Python3.10/: Dockerfile
tests/images/gcc10/: Dockerfile
(+4 files in other folders)
