[tool.poetry]
name = "runbox"
version = "0.4.0"
description = "Compile and run untrusted code in docker"
authors = ["Burenin Artem <burenotti@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiodocker = "^0.21.0"
aiohttp = "^3.8.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
sphinx-pydantic = "^0.1.1"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^4.5.0"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.2"
autopep8 = "^1.6.0"
mypy = "^0.942"
pip = "^22.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
