[tool.poetry]
name = "runbox"
version = "0.6.2"
description = "Compile and run untrusted code in docker"
authors = ["Burenin Artem <burenotti@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiodocker = "^0.21.0"
aiohttp = "^3.8.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
sphinx-pydantic = "^0.1.1"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^4.5.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.2"
autopep8 = "^1.6.0"
mypy = {git = "https://github.com/python/mypy"}
pip = "^22.0.4"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"
pytest-custom-exit-code = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
